@@ -14,525 +14,472 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
-import org.junit.jupiter.api.Tag;
 import org.example.Data.MainData;
 import org.junit.Ignore;
 import org.junit.Test;
+import org.junit.jupiter.api.Tag;
 import org.junit.platform.commons.util.StringUtils;
 
-import com.amazonaws.AmazonServiceException;
-import com.amazonaws.services.s3.model.AccessControlList;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.CanonicalGrantee;
-import com.amazonaws.services.s3.model.CreateBucketRequest;
-import com.amazonaws.services.s3.model.Grant;
-import com.amazonaws.services.s3.model.GroupGrantee;
-import com.amazonaws.services.s3.model.ObjectMetadata;
-import com.amazonaws.services.s3.model.Owner;
-import com.amazonaws.services.s3.model.Permission;
-import com.amazonaws.services.s3.model.PutObjectRequest;
+import software.amazon.awssdk.awscore.exception.AwsServiceException;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.model.AccessControlPolicy;
+import software.amazon.awssdk.services.s3.model.BucketCannedACL;
+import software.amazon.awssdk.services.s3.model.CreateBucketRequest;
+import software.amazon.awssdk.services.s3.model.GetBucketAclRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectAclRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.Grant;
+import software.amazon.awssdk.services.s3.model.Grantee;
+import software.amazon.awssdk.services.s3.model.ListObjectsRequest;
+import software.amazon.awssdk.services.s3.model.ObjectCannedACL;
+import software.amazon.awssdk.services.s3.model.Owner;
+import software.amazon.awssdk.services.s3.model.Permission;
+import software.amazon.awssdk.services.s3.model.PutBucketAclRequest;
+import software.amazon.awssdk.services.s3.model.PutObjectAclRequest;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 
-public class Grants extends TestBase
-{
+public class Grants extends TestBase {
 	@org.junit.jupiter.api.BeforeAll
-	public static void beforeAll()
-	{
-		System.out.println("Grants SDK V2 Start");
+	public static void beforeAll() {
+		System.out.println("Grants Start");
 	}
 
 	@org.junit.jupiter.api.AfterAll
-	public static void afterAll()
-	{
-		System.out.println("Grants SDK V2 End");
+	public static void afterAll() {
+		System.out.println("Grants End");
 	}
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : default] 권한을 설정하지 않고 생성한 버킷의 default acl정보가 올바른지 확인
-	public void test_bucket_acl_default()
-	{
+	// [bucketAcl : default] 권한을 설정하지 않고 생성한 버킷의 default acl정보가 올바른지 확인
+	public void testBucketAclDefault() {
 		var bucketName = getNewBucket();
 
 		var client = getClient();
-		var response = client.getBucketAcl(bucketName);
+		var response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
+		var user = config.mainUser.toGrantee();
 
-		if (!StringUtils.isBlank(config.url)) assertEquals(displayName, response.getOwner().getDisplayName());
-		assertEquals(userId, response.getOwner().getId());
+		if (!StringUtils.isBlank(config.url))
+			assertEquals(user.displayName(), response.owner().displayName());
+		assertEquals(user.id(), response.owner().id());
 
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : public-read] 권한을 public-read로 생성한 버킷의 acl정보가 올바른지 확인
-	public void test_bucket_acl_canned_during_create()
-	{
+	// [bucketAcl : public-read] 권한을 public-read로 생성한 버킷의 acl정보가 올바른지 확인
+	public void testBucketAclCannedDuringCreate() {
 		var bucketName = getNewBucketName();
 
 		var client = getClient();
-		client.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicRead));
-		var response = client.getBucketAcl(bucketName);
+		client.createBucket(CreateBucketRequest.builder().bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ).build());
+		var response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
+		var user = config.mainUser.toGrantee();
 
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(GroupGrantee.AllUsers, Permission.Read));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.READ).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : public-read => bucket_acl : private] 권한을 public-read로 생성한 버킷을 private로 변경할경우 올바르게 적용되는지 확인
-	public void test_bucket_acl_canned()
-	{
+	// [bucketAcl : public-read => bucketAcl : private] 권한을 public-read로 생성한 버킷을
+	// private로 변경할경우 올바르게 적용되는지 확인
+	public void testBucketAclCanned() {
 		var bucketName = getNewBucketName();
 
 		var client = getClient();
-		client.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicRead));
-		var response = client.getBucketAcl(bucketName);
+		client.createBucket(CreateBucketRequest.builder().bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ).build());
+		var response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
+		var user = config.mainUser.toGrantee();
 
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(GroupGrantee.AllUsers, Permission.Read));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(createPublicGrantee()).permission(Permission.READ).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 
-		client.setBucketAcl(bucketName, CannedAccessControlList.Private);
-		response = client.getBucketAcl(bucketName);
-		getGrants = response.getGrantsAsList();
+		client.putBucketAcl(PutBucketAclRequest.builder().bucket(bucketName).acl(BucketCannedACL.PRIVATE).build());
+		response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
+		getGrants = response.grants();
 
 		myGrants.clear();
-		myGrants.add(new Grant(user, Permission.FullControl));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : public-read-write] 권한을 public-read-write로 생성한 버킷의 acl정보가 올바른지 확인
-	public void test_bucket_acl_canned_publicreadwrite()
-	{
+	// [bucketAcl : public-read-write] 권한을 public-read-write로 생성한 버킷의 acl정보가 올바른지 확인
+	public void testBucketAclCannedPublicRW() {
 		var bucketName = getNewBucketName();
 
 		var client = getClient();
-		client.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
-		var response = client.getBucketAcl(bucketName);
+		client.createBucket(
+				CreateBucketRequest.builder().bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ_WRITE).build());
+		var response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
+		var user = config.mainUser.toGrantee();
 
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(GroupGrantee.AllUsers, Permission.Read));
-		myGrants.add(new Grant(GroupGrantee.AllUsers, Permission.Write));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.READ).build());
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.WRITE).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Bucket")
-	// [bucket_acl : authenticated-read] 권한을 authenticated-read로 생성한 버킷의 acl정보가 올바른지 확인
-	public void test_bucket_acl_canned_authenticatedread()
-	{
+	// [bucketAcl : authenticated-read] 권한을 authenticated-read로 생성한 버킷의 acl정보가 올바른지
+	// 확인
+	public void testBucketAclCannedAuthenticatedRead() {
 		var bucketName = getNewBucketName();
 
 		var client = getClient();
-		client.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.AuthenticatedRead));
-		var response = client.getBucketAcl(bucketName);
+		client.createBucket(
+				CreateBucketRequest.builder().bucket(bucketName).acl(BucketCannedACL.AUTHENTICATED_READ).build());
+		var response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
+		var user = config.mainUser.toGrantee();
 
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(GroupGrantee.AuthenticatedUsers, Permission.Read));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(createAuthenticatedGrantee()).permission(Permission.READ).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Object")
-	// [object_acl : default] 권한을 설정하지 않고 생성한 오브젝트의 default acl정보가 올바른지 확인
-	public void test_object_acl_default()
-	{
+	// [objectAcl : default] 권한을 설정하지 않고 생성한 오브젝트의 default acl정보가 올바른지 확인
+	public void testObjectAclDefault() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
 		var key = "foo";
-		client.putObject(bucketName, key, "bar");
-		var response = client.getObjectAcl(bucketName, key);
+		client.putObject(PutObjectRequest.builder().bucket(bucketName).key(key).build(), RequestBody.fromString("bar"));
+		var response = client.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
+		var user = config.mainUser.toGrantee();
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Object")
-	// [object_acl : public-read] 권한을 public-read로 생성한 오브젝트의 acl정보가 올바른지 확인
-	public void test_object_acl_canned_during_create()
-	{
+	// [objectAcl : public-read] 권한을 public-read로 생성한 오브젝트의 acl정보가 올바른지 확인
+	public void testObjectAclCannedDuringCreate() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var metadata = new ObjectMetadata();
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(3);
-
 		var key = "foo";
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withCannedAcl(CannedAccessControlList.PublicRead));
-		var response = client.getObjectAcl(bucketName, key);
+		client.putObject(
+				PutObjectRequest.builder().bucket(bucketName).key(key).acl(ObjectCannedACL.PUBLIC_READ).build(),
+				RequestBody.fromString("bar"));
+		var response = client.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
+		var user = config.mainUser.toGrantee();
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(GroupGrantee.AllUsers, Permission.Read));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.READ).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Object")
-	// [object_acl : public-read => object_acl : private] 권한을 public-read로 생성한 오브젝트를 private로 변경할경우 올바르게 적용되는지 확인
-	public void test_object_acl_canned()
-	{
+	// [objectAcl : public-read => objectAcl : private] 권한을 public-read로 생성한 오브젝트를
+	// private로 변경할경우 올바르게 적용되는지 확인
+	public void testObjectAclCanned() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var metadata = new ObjectMetadata();
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(3);
-
 		var key = "foo";
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withCannedAcl(CannedAccessControlList.PublicRead));
-		var response = client.getObjectAcl(bucketName, key);
+		client.putObject(
+				PutObjectRequest.builder().bucket(bucketName).key(key).acl(ObjectCannedACL.PUBLIC_READ).build(),
+				RequestBody.fromString("bar"));
+		var response = client.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
+		var user = config.mainUser.toGrantee();
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(GroupGrantee.AllUsers, Permission.Read));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.READ).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 
-		client.setObjectAcl(bucketName, key, CannedAccessControlList.Private);
-		response = client.getObjectAcl(bucketName, key);
+		client.putObjectAcl(
+				PutObjectAclRequest.builder().bucket(bucketName).key(key).acl(ObjectCannedACL.PRIVATE).build());
+		response = client.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
-		getGrants = response.getGrantsAsList();
+		getGrants = response.grants();
 		myGrants.clear();
-		myGrants.add(new Grant(user, Permission.FullControl));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Object")
-	// [object_acl : public-read-write] 권한을 public-read-write로 생성한 오브젝트의 acl정보가 올바른지 확인
-	public void test_object_acl_canned_publicreadwrite()
-	{
+	// [objectAcl : public-read-write] 권한을 public-read-write로 생성한 오브젝트의 acl정보가 올바른지
+	// 확인
+	public void testObjectAclCannedPublicRW() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var metadata = new ObjectMetadata();
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(3);
-
 		var key = "foo";
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withCannedAcl(CannedAccessControlList.PublicReadWrite));
-		var response = client.getObjectAcl(bucketName, key);
+		client.putObject(
+				PutObjectRequest.builder().bucket(bucketName).key(key).acl(ObjectCannedACL.PUBLIC_READ_WRITE).build(),
+				RequestBody.fromString("bar"));
+		var response = client.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
+		var user = config.mainUser.toGrantee();
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(GroupGrantee.AllUsers, Permission.Read));
-		myGrants.add(new Grant(GroupGrantee.AllUsers, Permission.Write));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.READ).build());
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.WRITE).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Object")
-	// [object_acl : authenticated-read] 권한을 authenticated-read로 생성한 오브젝트의 acl정보가 올바른지 확인
-	public void test_object_acl_canned_authenticatedread()
-	{
+	// [objectAcl : authenticated-read] 권한을 authenticated-read로 생성한 오브젝트의 acl정보가
+	// 올바른지 확인
+	public void testObjectAclCannedAuthenticatedRead() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var metadata = new ObjectMetadata();
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(3);
-
 		var key = "foo";
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withCannedAcl(CannedAccessControlList.AuthenticatedRead));
-		var response = client.getObjectAcl(bucketName, key);
+		client.putObject(
+				PutObjectRequest.builder().bucket(bucketName).key(key).acl(ObjectCannedACL.AUTHENTICATED_READ).build(),
+				RequestBody.fromString("bar"));
+		var response = client.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
+		var user = config.mainUser.toGrantee();
 
-		var displayName = config.mainUser.displayName;
-		var userId = config.mainUser.userId;
-		var user = new CanonicalGrantee(userId);
-		user.setDisplayName(displayName);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(GroupGrantee.AuthenticatedUsers, Permission.Read));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(createAuthenticatedGrantee()).permission(Permission.READ).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Object")
-	// [bucket_acl: public-read-write] [object_acl : public-read-write => object_acl : bucket-owner-read]" +
-	//"메인 유저가 권한을 public-read-write로 생성한 버켓에서 서브유저가 업로드한 오브젝트를 서브 유저가 권한을 bucket-owner-read로 변경하였을때 올바르게 적용되는지 확인
-	public void test_object_acl_canned_bucketownerread()
-	{
+	// [bucketAcl: public-read-write] [objectAcl : public-read-write => objectAcl :
+	// bucket-owner-read]" +
+	// "메인 유저가 권한을 public-read-write로 생성한 버켓에서 서브유저가 업로드한 오브젝트를 서브 유저가 권한을
+	// bucket-owner-read로 변경하였을때 올바르게 적용되는지 확인
+	public void testObjectAclCannedBucketOwnerRead() {
 		var bucketName = getNewBucketName();
 		var mainClient = getClient();
 		var altClient = getAltClient();
 		var key = "foo";
 
-		var metadata = new ObjectMetadata();
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(3);
+		mainClient.createBucket(
+				CreateBucketRequest.builder().bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ_WRITE).build());
+		altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key).build(),
+				RequestBody.fromString("bar"));
 
-		mainClient.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
-		altClient.putObject(bucketName, key, "bar");
+		var bucketACLResponse = mainClient.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
+		var owner = Grantee.builder()
+				.id(bucketACLResponse.owner().id())
+				.displayName(bucketACLResponse.owner().displayName())
+				.build();
 
-		var bucketACLResponse = mainClient.getBucketAcl(bucketName);
-		var bucketOwnerId = bucketACLResponse.getOwner().getId();
-		var bucketOwnerDisplayName = bucketACLResponse.getOwner().getDisplayName();
-		var owner = new CanonicalGrantee(bucketOwnerId);
-		owner.setDisplayName(bucketOwnerDisplayName);
+		altClient.putObject(
+				PutObjectRequest.builder()
+						.bucket(bucketName)
+						.key(key)
+						.acl(ObjectCannedACL.BUCKET_OWNER_READ)
+						.build(),
+				RequestBody.fromString("bar"));
+		var response = altClient.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
-		altClient.putObject(new PutObjectRequest(bucketName, key, createBody(key), metadata).withCannedAcl(CannedAccessControlList.BucketOwnerRead));
-		var response = altClient.getObjectAcl(bucketName, key);
+		var user = config.altUser.toGrantee();
 
-		var altDisplayName = config.altUser.displayName;
-		var altUserId = config.altUser.userId;
-		var user = new CanonicalGrantee(altUserId);
-		user.setDisplayName(altDisplayName);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(owner, Permission.Read));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(owner).permission(Permission.READ).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Object")
-	// [bucket_acl: public-read-write] [object_acl : public-read-write => object_acl : bucket-owner-full-control] " +
-	//"메인 유저가 권한을 public-read-write로 생성한 버켓에서 서브유저가 업로드한 오브젝트를 서브 유저가 권한을 bucket-owner-full-control로 변경하였을때 올바르게 적용되는지 확인
-	public void test_object_acl_canned_bucketownerfullcontrol()
-	{
+	// [bucketAcl: public-read-write] [objectAcl : public-read-write => objectAcl :
+	// bucket-owner-full-control] " +
+	// "메인 유저가 권한을 public-read-write로 생성한 버켓에서 서브유저가 업로드한 오브젝트를 서브 유저가 권한을
+	// bucket-owner-full-control로 변경하였을때 올바르게 적용되는지 확인
+	public void testObjectAclCannedBucketOwnerFullControl() {
 		var bucketName = getNewBucketName();
 		var mainClient = getClient();
 		var altClient = getAltClient();
 		var key = "foo";
 
-		var metadata = new ObjectMetadata();
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(3);
+		mainClient.createBucket(
+				CreateBucketRequest.builder().bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ_WRITE).build());
+		altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key).build(),
+				RequestBody.fromString("bar"));
 
-		mainClient.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
-		altClient.putObject(bucketName, key, "bar");
+		var bucketACLResponse = mainClient.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
+		var owner = Grantee.builder()
+				.id(bucketACLResponse.owner().id())
+				.displayName(bucketACLResponse.owner().displayName())
+				.build();
 
-		var bucketACLResponse = mainClient.getBucketAcl(bucketName);
-		var bucketOwnerId = bucketACLResponse.getOwner().getId();
-		var bucketOwnerDisplayName = bucketACLResponse.getOwner().getDisplayName();
-		var owner = new CanonicalGrantee(bucketOwnerId);
-		owner.setDisplayName(bucketOwnerDisplayName);
+		altClient.putObject(
+				PutObjectRequest.builder()
+						.bucket(bucketName)
+						.key(key)
+						.acl(ObjectCannedACL.BUCKET_OWNER_FULL_CONTROL)
+						.build(),
+				RequestBody.fromString("bar"));
+		var response = altClient.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
-		altClient.putObject(new PutObjectRequest(bucketName, key, createBody(key), metadata).withCannedAcl(CannedAccessControlList.BucketOwnerFullControl));
-		var response = altClient.getObjectAcl(bucketName, key);
+		var user = config.altUser.toGrantee();
 
-		var altDisplayName = config.altUser.displayName;
-		var altUserId = config.altUser.userId;
-		var user = new CanonicalGrantee(altUserId);
-		user.setDisplayName(altDisplayName);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(user, Permission.FullControl));
-		myGrants.add(new Grant(owner, Permission.FullControl));
+		myGrants.add(Grant.builder().grantee(user).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(owner).permission(Permission.FULL_CONTROL).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Object")
-	// [bucket_acl: public-read-write] " +
-	//"메인 유저가 권한을 public-read-write로 생성한 버켓에서 메인유저가 생성한 오브젝트의 권한을 서브유저에게 FULL_CONTROL, 소유주를 메인유저로 설정한뒤 서브 유저가 권한을 READ_ACP, 소유주를 메인유저로 설정하였을때 오브젝트의 소유자가 유지되는지 확인
-	public void test_object_acl_full_control_verify_owner()
-	{
+	// [bucketAcl: public-read-write] " +
+	// "메인 유저가 권한을 public-read-write로 생성한 버켓에서 메인유저가 생성한 오브젝트의 권한을 서브유저에게
+	// FULL_CONTROL, 소유주를 메인유저로 설정한뒤 서브 유저가 권한을 READ_ACP, 소유주를 메인유저로 설정하였을때 오브젝트의
+	// 소유자가 유지되는지 확인
+	public void testObjectAclFullControlVerifyOwner() {
 		var bucketName = getNewBucketName();
 		var mainClient = getClient();
 		var altClient = getAltClient();
 		var key = "foo";
 
-		mainClient.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
-		mainClient.putObject(bucketName, key, "bar");
+		mainClient.createBucket(
+				CreateBucketRequest.builder().bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ_WRITE).build());
+		mainClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key).build(),
+				RequestBody.fromString("bar"));
 
-		var mainUserId = config.mainUser.userId;
-		var mainDisplayName = config.mainUser.displayName;
-		var mainUser = new CanonicalGrantee(mainUserId);
-		mainUser.setDisplayName(mainDisplayName);
+		var altUser = config.altUser.toGrantee();
 
-		var altUserId = config.altUser.userId;
-		var altDisplayName = config.altUser.displayName;
-		var altUser = new CanonicalGrantee(altUserId);
-		altUser.setDisplayName(altDisplayName);
+		var accessControlList = AccessControlPolicy.builder()
+				.owner(config.mainUser.toOwner())
+				.grants(Grant.builder().grantee(altUser).permission(Permission.FULL_CONTROL).build()).build();
 
+		mainClient.putObjectAcl(PutObjectAclRequest.builder().bucket(bucketName).key(key)
+				.accessControlPolicy(accessControlList).build());
+		accessControlList = AccessControlPolicy.builder()
+				.owner(config.mainUser.toOwner())
+				.grants(Grant.builder().grantee(altUser).permission(Permission.READ_ACP).build()).build();
 
-		var accessControlList = new AccessControlList();
-		accessControlList.setOwner(new Owner(mainUserId, mainDisplayName));
-		accessControlList.grantPermission(altUser, Permission.FullControl);
+		altClient.putObjectAcl(PutObjectAclRequest.builder().bucket(bucketName).key(key)
+				.accessControlPolicy(accessControlList).build());
 
-		mainClient.setObjectAcl(bucketName, key, accessControlList);
-		accessControlList = new AccessControlList();
-		accessControlList.setOwner(new Owner(mainUserId, mainDisplayName));
-		accessControlList.grantPermission(altUser, Permission.ReadAcp);
-
-		altClient.setObjectAcl(bucketName, key, accessControlList);
-
-		var response = altClient.getObjectAcl(bucketName, key);
-		assertEquals(mainUserId, response.getOwner().getId());
+		var response = altClient.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
+		assertEquals(config.mainUser.userId, response.owner().id());
 	}
 
 	@Test
 	@Tag("ETag")
-	// [bucket_acl: public-read-write] 권한정보를 추가한 오브젝트의 eTag값이 변경되지 않는지 확인
-	public void test_object_acl_full_control_verify_attributes()
-	{
+	// [bucketAcl: public-read-write] 권한정보를 추가한 오브젝트의 eTag값이 변경되지 않는지 확인
+	public void testObjectAclFullControlVerifyAttributes() {
 		var bucketName = getNewBucketName();
 		var mainClient = getClient();
 		var key = "foo";
 
-		mainClient.createBucket(new CreateBucketRequest(bucketName).withCannedAcl(CannedAccessControlList.PublicReadWrite));
+		mainClient.createBucket(
+				CreateBucketRequest.builder().bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ_WRITE).build());
 
-		var headers = new ObjectMetadata();
-		headers.addUserMetadata("x-amz-meta-foo", "bar");
-		headers.setContentType("text/plain");
-		headers.setContentLength(3);
+		mainClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key).build(),
+				RequestBody.fromString("bar"));
 
-		mainClient.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), headers));
+		var response = mainClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key).build());
+		var contentType = response.response().contentType();
+		var eTag = response.response().eTag();
 
-		var response = mainClient.getObject(bucketName, key);
-		var contentType = response.getObjectMetadata().getContentType();
-		var eTag = response.getObjectMetadata().getETag();
+		var altUser = config.altUser.toGrantee();
 
-		var altUserId = config.altUser.userId;
-		var altDisplayName = config.altUser.displayName;
-		var altUser = new CanonicalGrantee(altUserId);
-		altUser.setDisplayName(altDisplayName);
+		var accessControlList = addObjectUserGrant(bucketName, key,
+				Grant.builder().grantee(altUser).permission(Permission.FULL_CONTROL).build());
 
-		var accessControlList = addObjectUserGrant(bucketName, key, new Grant(altUser, Permission.FullControl));
+		mainClient.putObjectAcl(PutObjectAclRequest.builder().bucket(bucketName).key(key)
+				.accessControlPolicy(accessControlList).build());
 
-		mainClient.setObjectAcl(bucketName, key, accessControlList);
-
-		response = mainClient.getObject(bucketName, key);
-		assertEquals(contentType, response.getObjectMetadata().getContentType());
-		assertEquals(eTag, response.getObjectMetadata().getETag());
+		response = mainClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key).build());
+		assertEquals(contentType, response.response().contentType());
+		assertEquals(eTag, response.response().eTag());
 	}
 
 	@Test
 	@Tag("Permission")
-	// [bucket_acl:private] 기본생성한 버킷에 priavte 설정이 가능한지 확인
-	public void test_bucket_acl_canned_private_to_private()
-	{
+	// [bucketAcl:private] 기본생성한 버킷에 private 설정이 가능한지 확인
+	public void testBucketAclCannedPrivateToPrivate() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		client.setBucketAcl(bucketName, CannedAccessControlList.Private);
+		client.putBucketAcl(PutBucketAclRequest.builder().bucket(bucketName).acl(BucketCannedACL.PRIVATE).build());
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : FULL_CONTROL
-	public void test_object_acl()
-	{
-		checkObjectACL(Permission.FullControl);
+	public void testObjectAcl() {
+		checkObjectACL(Permission.FULL_CONTROL);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : WRITE
-	public void test_object_acl_write()
-	{
-		checkObjectACL(Permission.Write);
+	public void testObjectAclWrite() {
+		checkObjectACL(Permission.WRITE);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : WRITE_ACP
-	public void test_object_acl_writeacp()
-	{
-		checkObjectACL(Permission.WriteAcp);
+	public void testObjectAclWriteAcp() {
+		checkObjectACL(Permission.WRITE_ACP);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : READ
-	public void test_object_acl_read()
-	{
-		checkObjectACL(Permission.Read);
+	public void testObjectAclRead() {
+		checkObjectACL(Permission.READ);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 오브젝트에 설정한 acl정보가 올바르게 적용되었는지 확인 : READ_ACP
-	public void test_object_acl_readacp()
-	{
-		checkObjectACL(Permission.ReadAcp);
+	public void testObjectAclReadAcp() {
+		checkObjectACL(Permission.READ_ACP);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : FULL_CONTROL
-	public void test_bucket_acl_grant_userid_fullcontrol()
-	{
-		var bucketName = bucketACLGrantUserId(Permission.FullControl);
+	public void testBucketAclGrantUserFullControl() {
+		var bucketName = bucketACLGrantUserId(Permission.FULL_CONTROL);
 
 		checkBucketACLGrantCanRead(bucketName);
 		checkBucketACLGrantCanReadACP(bucketName);
@@ -541,23 +488,23 @@ public class Grants extends TestBase
 
 		var client = getClient();
 
-		var bucketACLResponse = client.getBucketAcl(bucketName);
-		var ownerId = bucketACLResponse.getOwner().getId();
-		var ownerDisplayName = bucketACLResponse.getOwner().getDisplayName();
+		var bucketACLResponse = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
+		var ownerId = bucketACLResponse.owner().id();
+		var ownerDisplayName = bucketACLResponse.owner().displayName();
 
 		var mainUserId = config.mainUser.userId;
 		var mainDisplayName = config.mainUser.displayName;
 
 		assertEquals(mainUserId, ownerId);
-		if (!StringUtils.isBlank(config.url)) assertEquals(mainDisplayName, ownerDisplayName);
+		if (!StringUtils.isBlank(config.url))
+			assertEquals(mainDisplayName, ownerDisplayName);
 	}
 
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : READ
-	public void test_bucket_acl_grant_userid_read()
-	{
-		var bucketName = bucketACLGrantUserId(Permission.Read);
+	public void testBucketAclGrantUserRead() {
+		var bucketName = bucketACLGrantUserId(Permission.READ);
 
 		checkBucketACLGrantCanRead(bucketName);
 		checkBucketACLGrantCantReadACP(bucketName);
@@ -568,9 +515,8 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : READ_ACP
-	public void test_bucket_acl_grant_userid_readacp()
-	{
-		var bucketName = bucketACLGrantUserId(Permission.ReadAcp);
+	public void testBucketAclGrantUserReadAcp() {
+		var bucketName = bucketACLGrantUserId(Permission.READ_ACP);
 
 		checkBucketACLGrantCantRead(bucketName);
 		checkBucketACLGrantCanReadACP(bucketName);
@@ -581,9 +527,8 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : WRITE
-	public void test_bucket_acl_grant_userid_write()
-	{
-		var bucketName = bucketACLGrantUserId(Permission.Write);
+	public void testBucketAclGrantUserWrite() {
+		var bucketName = bucketACLGrantUserId(Permission.WRITE);
 
 		checkBucketACLGrantCantRead(bucketName);
 		checkBucketACLGrantCantReadACP(bucketName);
@@ -594,9 +539,8 @@ public class Grants extends TestBase
 	@Test
 	@Tag("Permission")
 	// 메인 유저가 버킷에 설정한 acl정보대로 서브유저가 해당 버킷에 접근 가능한지 확인 : WRITE_ACP
-	public void test_bucket_acl_grant_userid_writeacp()
-	{
-		var bucketName = bucketACLGrantUserId(Permission.WriteAcp);
+	public void testBucketAclGrantUserWriteAcp() {
+		var bucketName = bucketACLGrantUserId(Permission.WRITE_ACP);
 
 		checkBucketACLGrantCantRead(bucketName);
 		checkBucketACLGrantCantReadACP(bucketName);
@@ -607,17 +551,18 @@ public class Grants extends TestBase
 	@Test
 	@Tag("ERROR")
 	// 버킷에 존재하지 않는 유저를 추가하려고 하면 에러 발생 확인
-	public void test_bucket_acl_grant_nonexist_user()
-	{
+	public void testBucketAclGrantNonExistUser() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		var badUser = new CanonicalGrantee("_foo");
-		var accessControlList = addBucketUserGrant(bucketName, new Grant(badUser, Permission.FullControl));
+		var badUser = Grantee.builder().id("Foo").build();
+		var accessControlList = addBucketUserGrant(bucketName,
+				Grant.builder().grantee(badUser).permission(Permission.FULL_CONTROL).build());
 
-		var e = assertThrows(AmazonServiceException.class, () -> client.setBucketAcl(bucketName, accessControlList));
-		var statusCode = e.getStatusCode();
-		var errorCode = e.getErrorCode();
+		var e = assertThrows(AwsServiceException.class, () -> client.putBucketAcl(
+				PutBucketAclRequest.builder().bucket(bucketName).accessControlPolicy(accessControlList).build()));
+		var statusCode = e.statusCode();
+		var errorCode = e.getMessage();
 		assertEquals(400, statusCode);
 		assertEquals(MainData.InvalidArgument, errorCode);
 	}
@@ -625,446 +570,555 @@ public class Grants extends TestBase
 	@Test
 	@Tag("ERROR")
 	// 버킷에 권한정보를 모두 제거했을때 오브젝트를 업데이트 하면 실패 확인
-	public void test_bucket_acl_no_grants()
-	{
+	public void testBucketAclNoGrants() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
 
-		client.putObject(bucketName, key, "bar");
-		var response = client.getBucketAcl(bucketName);
-		var oldGrants = response.getGrantsAsList();
-		var policy = new AccessControlList();
-		policy.setOwner(response.getOwner());
+		client.putObject(PutObjectRequest.builder().bucket(bucketName).key(key).build(), RequestBody.fromString("bar"));
+		var response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
+		var oldGrants = response.grants();
+		var policy = AccessControlPolicy.builder().owner(response.owner());
 
-		client.setBucketAcl(bucketName, policy);
+		client.putBucketAcl(
+				PutBucketAclRequest.builder().bucket(bucketName).accessControlPolicy(policy.build()).build());
 
-		client.getObject(bucketName, key);
-
-		assertThrows(AmazonServiceException.class, () -> client.putObject(bucketName, key, "A"));
+		assertThrows(AwsServiceException.class,
+				() -> client.putObject(PutObjectRequest.builder().bucket(bucketName).key(key).build(),
+						RequestBody.fromString("A")));
 
 		var client2 = getClient();
-		client2.getBucketAcl(bucketName);
-		client2.setBucketAcl(bucketName, CannedAccessControlList.Private);
+		client2.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
+		client2.putBucketAcl(PutBucketAclRequest.builder().bucket(bucketName).acl(BucketCannedACL.PRIVATE).build());
 
-		for(var MyGrant : oldGrants) policy.grantAllPermissions(MyGrant);
-		client2.setBucketAcl(bucketName, policy);
+		policy.grants(oldGrants);
+		client2.putBucketAcl(
+				PutBucketAclRequest.builder().bucket(bucketName).accessControlPolicy(policy.build()).build());
 	}
 
 	@Test
 	@Tag("Header")
 	// 오브젝트를 생성하면서 권한정보를 여러개보낼때 모두 올바르게 적용되었는지 확인
-	public void test_object_header_acl_grants()
-	{
+	public void testObjectHeaderAclGrants() {
 		var bucketName = getNewBucket();
 		var client = getClient();
-		var key = "foo_key";
+		var key = "foo";
+		var altUser = config.altUser.toGrantee();
 
-		var metadata = new ObjectMetadata();
-		metadata.setContentType("text/plain");
-		metadata.setContentLength(3);
+		client.putObject(
+				PutObjectRequest.builder()
+						.bucket(bucketName)
+						.key(key)
+						.grantFullControl(config.altUser.userId)
+						.grantRead(config.altUser.userId)
+						.grantReadACP(config.altUser.userId)
+						.grantWriteACP(config.altUser.userId)
+						.build(),
+				RequestBody.fromString("bar"));
 
-		var altUser = new CanonicalGrantee(config.altUser.userId);
-		altUser.setDisplayName(config.altUser.displayName);
+		var response = client.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
-		var grants = getGrantList(null, null);
-
-		client.putObject(new PutObjectRequest(bucketName, key, createBody("bar"), metadata).withAccessControlList(grants));
-		var response = client.getObjectAcl(bucketName, key);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(altUser, Permission.FullControl));
-		myGrants.add(new Grant(altUser, Permission.Read));
-		myGrants.add(new Grant(altUser, Permission.ReadAcp));
-		myGrants.add(new Grant(altUser, Permission.Write));
-		myGrants.add(new Grant(altUser, Permission.WriteAcp));
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.READ).build());
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.READ_ACP).build());
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.WRITE_ACP).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Header")
 	// 버킷 생성하면서 권한정보를 여러개 보낼때 모두 올바르게 적용되었는지 확인
-	public void test_bucket_header_acl_grants()
-	{
+	public void testBucketHeaderAclGrants() {
 		var bucketName = getNewBucketName();
 		var client = getClient();
+		var altUser = config.altUser.toGrantee();
 
-		var altUser = new CanonicalGrantee(config.altUser.userId);
-		altUser.setDisplayName(config.altUser.displayName);
+		client.createBucket(CreateBucketRequest.builder().bucket(bucketName)
+				.grantFullControl(config.altUser.userId)
+				.grantRead(config.altUser.userId)
+				.grantReadACP(config.altUser.userId)
+				.grantWrite(config.altUser.userId)
+				.grantWriteACP(config.altUser.userId)
+				.build());
+		var response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
 
-		var headers = getGrantList(null, null);
-
-		client.createBucket(new CreateBucketRequest(bucketName).withAccessControlList(headers));
-		var response = client.getBucketAcl(bucketName);
-
-		var getGrants = response.getGrantsAsList();
+		var getGrants = response.grants();
 		var myGrants = new ArrayList<Grant>();
-		myGrants.add(new Grant(altUser, Permission.FullControl));
-		myGrants.add(new Grant(altUser, Permission.Read));
-		myGrants.add(new Grant(altUser, Permission.ReadAcp));
-		myGrants.add(new Grant(altUser, Permission.Write));
-		myGrants.add(new Grant(altUser, Permission.WriteAcp));
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.FULL_CONTROL).build());
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.READ).build());
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.READ_ACP).build());
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.WRITE).build());
+		myGrants.add(Grant.builder().grantee(altUser).permission(Permission.WRITE_ACP).build());
 		checkGrants(myGrants, new ArrayList<>(getGrants));
 	}
 
 	@Test
 	@Tag("Delete")
 	// 버킷의 acl 설정이 누락될 경우 실패함을 확인
-	public void test_bucket_acl_revoke_all()
-	{
+	public void testBucketAclRevokeAll() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		client.putObject(bucketName, "foo", "bar");
-		var response = client.getBucketAcl(bucketName);
+		client.putObject(PutObjectRequest.builder().bucket(bucketName).key("foo").build(),
+				RequestBody.fromString("bar"));
+		var response = client.getBucketAcl(GetBucketAclRequest.builder().bucket(bucketName).build());
 
-		var acl1 = new AccessControlList();
-		acl1.setOwner(new Owner());
-		for (var Item : response.getGrantsAsList()) acl1.grantAllPermissions(Item);
+		var acl1 = AccessControlPolicy.builder();
+		acl1.owner(Owner.builder().build());
+		acl1.grants(response.grants());
 
-		assertThrows(AmazonServiceException.class, () -> client.setBucketAcl(bucketName, acl1));
+		assertThrows(AwsServiceException.class, () -> client.putBucketAcl(
+				PutBucketAclRequest.builder().bucket(bucketName).accessControlPolicy(acl1.build()).build()));
 
-		var acl2 = new AccessControlList();
-		acl2.setOwner(response.getOwner());
+		var acl2 = AccessControlPolicy.builder();
+		acl2.owner(response.owner());
 
-		client.setBucketAcl(bucketName, acl2);
+		client.putBucketAcl(
+				PutBucketAclRequest.builder().bucket(bucketName).accessControlPolicy(acl2.build()).build());
 
-		var acl3 = new AccessControlList();
-		acl3.setOwner(new Owner());
+		var acl3 = AccessControlPolicy.builder();
+		acl3.owner(Owner.builder().build());
 
-		assertThrows(AmazonServiceException.class, () -> client.setBucketAcl(bucketName, acl3));
+		assertThrows(AwsServiceException.class, () -> client.putBucketAcl(
+				PutBucketAclRequest.builder().bucket(bucketName).accessControlPolicy(acl3.build()).build()));
 	}
 
 	@Test
-	@Tag("Delete")
+	@Tag("Access")
 	// 오브젝트의 acl 설정이 누락될 경우 실패함을 확인
-	public void test_object_acl_revoke_all()
-	{
+	public void testObjectAclRevokeAll() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "foo";
 
-		client.putObject(bucketName, key, "bar");
+		client.putObject(PutObjectRequest.builder().bucket(bucketName).key(key).build(), RequestBody.fromString("bar"));
 
-		var response = client.getObjectAcl(bucketName, key);
+		var response = client.getObjectAcl(GetObjectAclRequest.builder().bucket(bucketName).key(key).build());
 
-		var acl1 = new AccessControlList();
-		acl1.setOwner(new Owner());
-		for (var Item : response.getGrantsAsList()) acl1.grantAllPermissions(Item);
+		var acl1 = AccessControlPolicy.builder();
+		acl1.owner(Owner.builder().build());
+		acl1.grants(response.grants());
 
-		assertThrows(AmazonServiceException.class, () -> client.setObjectAcl(bucketName, key, acl1));
-
-		var acl2 = new AccessControlList();
-		acl2.setOwner(response.getOwner());
-		
-		client.setObjectAcl(bucketName, key, acl2);
-
-		var acl3 = new AccessControlList();
-		acl3.setOwner(new Owner());
-
-		assertThrows(AmazonServiceException.class, () -> client.setObjectAcl(bucketName, key, acl3));
+		assertThrows(AwsServiceException.class, () -> client.putObjectAcl(
+				PutObjectAclRequest.builder().bucket(bucketName).key(key).accessControlPolicy(acl1.build()).build()));
 	}
 
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트를 서브유저가 오브젝트 목록을 보거나 다운로드 할 수 없음을 확인
-	public void test_access_bucket_private_object_private()
-	{
+	// [bucketAcl:private, objectAcl:private] 메인유저가 private권한으로 생성한 버킷과 오브젝트를 서브유저가
+	// 오브젝트 목록을 보거나 다운로드 할 수 없음을 확인
+	public void testAccessBucketPrivateObjectPrivate() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.Private);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PRIVATE, ObjectCannedACL.PRIVATE);
 
 		var altClient = getAltClient();
 
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key1));
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient.listObjects(bucketName));
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, key2));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, newKey, "newcontent"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트를 서브유저가 오브젝트 목록을 보거나 다운로드 할 수 없음을 확인(ListObjects_v2)
-	public void test_access_bucket_private_objectv2_private()
-	{
+	// [bucketAcl:private, objectAcl:private] 메인유저가 private권한으로 생성한 버킷과 오브젝트를 서브유저가
+	// 오브젝트 목록을 보거나 다운로드 할 수 없음을 확인(ListObjectsV2)
+	public void testAccessBucketPrivateObjectV2Private() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.Private);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PRIVATE, ObjectCannedACL.PRIVATE);
 
 		var altClient = getAltClient();
 
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key1));
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient.listObjectsV2(bucketName));
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, key2));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
 
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, newKey, "newcontent"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private, public-read] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read로 설정한 오브젝트는 다운로드 할 수 있음을 확인
-	public void test_access_bucket_private_object_publicread()
-	{
+	// [bucketAcl:private, objectAcl:private, public-read] 메인유저가 private권한으로 생성한 버킷과
+	// 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read로 설정한 오브젝트는 다운로드 할 수 있음을 확인
+	public void testAccessBucketPrivateObjectPublicRead() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.PublicRead);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PRIVATE, ObjectCannedACL.PUBLIC_READ);
 		var altClient = getAltClient();
-		var response = altClient.getObject(bucketName, key1);
+		var response = altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build());
 
-		var body = getBody(response.getObjectContent());
+		var body = getBody(response);
 		assertEquals(key1, body);
 
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
 		var altClient3 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient3.listObjects(bucketName));
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient3.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private, public-read] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read로 설정한 오브젝트는 다운로드 할 수 있음을 확인(ListObjects_v2)
-	public void test_access_bucket_private_objectv2_publicread()
-	{
+	// [bucketAcl:private, objectAcl:private, public-read] 메인유저가 private권한으로 생성한 버킷과
+	// 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read로 설정한 오브젝트는 다운로드 할 수 있음을
+	// 확인(ListObjectsV2)
+	public void testAccessBucketPrivateObjectV2PublicRead() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.PublicRead);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PRIVATE, ObjectCannedACL.PUBLIC_READ);
 		var altClient = getAltClient();
-		var response = altClient.getObject(bucketName, key1);
+		var response = altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build());
 
-		var body = getBody(response.getObjectContent());
+		var body = getBody(response);
 		assertEquals(key1, body);
 
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
 		var altClient3 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient3.listObjectsV2(bucketName));
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient3.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private, public-read-write] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read-write로 설정한 오브젝트는 다운로드만 할 수 있음을 확인 (버킷의 권한이 private이기 때문에 오브젝트의 권한이 public-read-write로 설정되어있어도 업로드불가)
-	public void test_access_bucket_private_object_publicreadwrite()
-	{
+	// [bucketAcl:private, objectAcl:private, public-read-write] 메인유저가 private권한으로
+	// 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read-write로 설정한 오브젝트는 다운로드만 할
+	// 수 있음을 확인 (버킷의 권한이 private이기 때문에 오브젝트의 권한이 public-read-write로 설정되어있어도 업로드불가)
+	public void testAccessBucketPrivateObjectPublicRW() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.PublicReadWrite);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PRIVATE, ObjectCannedACL.PUBLIC_READ_WRITE);
 		var altClient = getAltClient();
-		var response = altClient.getObject(bucketName, key1);
+		var response = altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build());
 
-		var body = getBody(response.getObjectContent());
+		var body = getBody(response);
 		assertEquals(key1, body);
 
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
 		var altClient3 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient3.listObjects(bucketName));
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient3.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:private, object_acl:private, public-read-write] 메인유저가 pirvate권한으로 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read-write로 설정한 오브젝트는 다운로드만 할 수 있음을 확인(ListObjects_v2) (버킷의 권한이 private이기 때문에 오브젝트의 권한이 public-read-write로 설정되어있어도 업로드불가)
-	public void test_access_bucket_private_objectv2_publicreadwrite()
-	{
+	// [bucketAcl:private, objectAcl:private, public-read-write] 메인유저가 private권한으로
+	// 생성한 버킷과 오브젝트는 서브유저가 목록을 보거나 다운로드할 수 없지만 public-read-write로 설정한 오브젝트는 다운로드만 할
+	// 수 있음을 확인(ListObjectsV2) (버킷의 권한이 private이기 때문에 오브젝트의 권한이 public-read-write로
+	// 설정되어있어도 업로드불가)
+	public void testAccessBucketPrivateObjectV2PublicRW() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.Private, CannedAccessControlList.PublicReadWrite);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PRIVATE, ObjectCannedACL.PUBLIC_READ_WRITE);
 		var altClient = getAltClient();
-		var response = altClient.getObject(bucketName, key1);
+		var response = altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build());
 
-		var body = getBody(response.getObjectContent());
+		var body = getBody(response);
 		assertEquals(key1, body);
 
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
 		var altClient3 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient3.listObjectsV2(bucketName));
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient3.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read, object_acl:private] 메인유저가 public-read권한으로 생성한 버킷에서 private권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록만 볼 수 있음을 확인
-	public void test_access_bucket_publicread_object_private()
-	{
+	// [bucketAcl:public-read, objectAcl:private] 메인유저가 public-read권한으로 생성한 버킷에서
+	// private권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록만 볼 수 있음을 확인
+	public void testAccessBucketPublicReadObjectPrivate() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead, CannedAccessControlList.Private);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PUBLIC_READ, ObjectCannedACL.PRIVATE);
 		var altClient = getAltClient();
 
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key1));
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
 		var altClient3 = getAltClient();
-		var objList = getKeys(altClient3.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objList);
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+		var objList = getKeys(
+				altClient3.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()).contents());
+		assertEquals(List.of(key2, key1), objList);
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read, object_acl:public-read, private] 메인유저가 public-read권한으로 생성한 버킷에서 public-read권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을 보거나 다운로드 할 수 있음을 확인
-	public void test_access_bucket_publicread_object_publicread()
-	{
+	// [bucketAcl:public-read, objectAcl:public-read, private] 메인유저가 public-read권한으로
+	// 생성한 버킷에서 public-read권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을 보거나 다운로드 할 수 있음을 확인
+	public void testAccessBucketPublicReadObjectPublicRead() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead, CannedAccessControlList.PublicRead);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PUBLIC_READ,
+				ObjectCannedACL.PUBLIC_READ);
 		var altClient = getAltClient();
 
-		var response = altClient.getObject(bucketName, key1);
-		var body = getBody(response.getObjectContent());
+		var response = altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build());
+		var body = getBody(response);
 		assertEquals(key1, body);
 
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
 		var altClient3 = getAltClient();
-		var objList = getKeys(altClient3.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objList);
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+		var objList = getKeys(
+				altClient3.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()).contents());
+		assertEquals(List.of(key2, key1), objList);
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read, object_acl:public-read-wirte, private] 메인유저가 public-read권한으로 생성한 버킷에서 public-read-write권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을 보거나 다운로드 할 수 있음을 확인 (버킷의 권한이 public-read이기 때문에 오브젝트의 권한이 public-read-write로 설정되어있어도 수정불가)
-	public void test_access_bucket_publicread_object_publicreadwrite()
-	{
+	// [bucketAcl:public-read, objectAcl:public-read-write, private] 메인유저가
+	// public-read권한으로 생성한 버킷에서 public-read-write권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을
+	// 보거나 다운로드 할 수 있음을 확인 (버킷의 권한이 public-read이기 때문에 오브젝트의 권한이 public-read-write로
+	// 설정되어있어도 수정불가)
+	public void testAccessBucketPublicReadObjectPublicRW() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicRead, CannedAccessControlList.PublicReadWrite);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PUBLIC_READ,
+				ObjectCannedACL.PUBLIC_READ_WRITE);
 		var altClient = getAltClient();
 
-		var response = altClient.getObject(bucketName, key1);
-		var body = getBody(response.getObjectContent());
+		var response = altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build());
+		var body = getBody(response);
 		assertEquals(key1, body);
 
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
 		var altClient2 = getAltClient();
-		assertThrows(AmazonServiceException.class, () -> altClient2.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient2.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
 		var altClient3 = getAltClient();
-		var objList = getKeys(altClient3.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objList);
-		assertThrows(AmazonServiceException.class, () -> altClient3.putObject(bucketName, newKey, "newcontent"));
+		var objList = getKeys(
+				altClient3.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()).contents());
+		assertEquals(List.of(key2, key1), objList);
+		assertThrows(AwsServiceException.class,
+				() -> altClient2.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+						RequestBody.fromString("new-content")));
 	}
 
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read-write, object_acl:private] 메인유저가 public-read-write권한으로 생성한 버킷에서
+	// [bucketAcl:public-read-write, objectAcl:private] 메인유저가 public-read-write권한으로
+	// 생성한 버킷에서
 	// private권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록 조회는 가능하나 다운로드 할 수 없음을 확인
-	public void test_access_bucket_publicreadwrite_object_private()
-	{
+	public void testAccessBucketPublicRWObjectPrivate() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite, CannedAccessControlList.Private);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PUBLIC_READ_WRITE,
+				ObjectCannedACL.PRIVATE);
 		var altClient = getAltClient();
 
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key1));
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key2, "baroverwrite"));
-
-		var objList = getKeys(altClient.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objList);
-		altClient.putObject(bucketName, newKey, "newcontent");
+		var objList = getKeys(
+				altClient.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()).contents());
+		assertEquals(List.of(key2, key1), objList);
+		altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+				RequestBody.fromString("new-content"));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("Access")
-	// [bucket_acl:public-read-write, object_acl:public-read, private] 메인유저가 public-read-write권한으로 생성한 버킷에서
+	// [bucketAcl:public-read-write, objectAcl:public-read, private] 메인유저가
+	// public-read-write권한으로 생성한 버킷에서
 	// public-read권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록 조회, 다운로드 가능함을 확인
-	public void test_access_bucket_publicreadwrite_object_publicread()
-	{
+	public void testAccessBucketPublicRWObjectPublicRead() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite, CannedAccessControlList.PublicRead);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PUBLIC_READ_WRITE,
+				ObjectCannedACL.PUBLIC_READ);
 		var altClient = getAltClient();
 
-		var response = altClient.getObject(bucketName, key1);
-		var body = getBody(response.getObjectContent());
+		var response = altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build());
+		var body = getBody(response);
 		assertEquals(key1, body);
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
-		var objects = getKeys(altClient.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objects);
-		altClient.putObject(bucketName, newKey, "newcontent");
+		var objects = getKeys(
+				altClient.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()).contents());
+		assertEquals(List.of(key2, key1), objects);
+		altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+				RequestBody.fromString("new-content"));
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Ignore
 	@Tag("Access")
-	// [bucket_acl:public-read-write, object_acl:public-read-write, private] 메인유저가 public-read-write권한으로 생성한 버킷에서
+	// [bucketAcl:public-read-write, objectAcl:public-read-write, private] 메인유저가
+	// public-read-write권한으로 생성한 버킷에서
 	// public-read-write권한으로 생성한 오브젝트에 대해 서브유저는 오브젝트 목록을 읽거나 다운로드 가능함을 확인
-	public void test_access_bucket_publicreadwrite_object_publicreadwrite()
-	{
+	public void testAccessBucketPublicRWObjectPublicRW() {
 		var key1 = "foo";
 		var key2 = "bar";
 		var newKey = "new";
-		var bucketName = setupAccessTest(key1, key2, CannedAccessControlList.PublicReadWrite, CannedAccessControlList.PublicReadWrite);
+		var bucketName = setupAccessTest(key1, key2, BucketCannedACL.PUBLIC_READ_WRITE,
+				ObjectCannedACL.PUBLIC_READ_WRITE);
 		var altClient = getAltClient();
 
-		var response = altClient.getObject(bucketName, key1);
-		var body = getBody(response.getObjectContent());
+		var response = altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key1).build());
+		var body = getBody(response);
 		assertEquals(key1, body);
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key1, "foooverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key1).build(),
+						RequestBody.fromString("overwrite")));
 
-		assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key2));
-		assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key2, "baroverwrite"));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(GetObjectRequest.builder().bucket(bucketName).key(key2).build()));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(key2).build(),
+						RequestBody.fromString("alt-overwrite")));
 
-		var objects = getKeys(altClient.listObjects(bucketName).getObjectSummaries());
-		assertEquals(new ArrayList<>(Arrays.asList(new String[] { key2, key1 })), objects);
-		altClient.putObject(bucketName, newKey, "newcontent");
+		var objects = getKeys(
+				altClient.listObjects(ListObjectsRequest.builder().bucket(bucketName).build()).contents());
+		assertEquals(List.of(key2, key1), objects);
+		altClient.putObject(PutObjectRequest.builder().bucket(bucketName).key(newKey).build(),
+				RequestBody.fromString("new-content"));
 	}
 }
